--- a/css/mian.css
+++ b/css/mian.css
@@ -69,6 +69,10 @@ h4 {
   line-height: 100%;
   font-size: 1.125rem;
 }
+a {
+  text-decoration: none;
+  color: inherit;
+}
 /* Scrollbar */
 ::-webkit-scrollbar {
   width: 0.5rem;
@@ -93,7 +97,7 @@ h4 {
 main {
   margin: auto;
   width: 100%; /* Adjusted for mobile */
-  min-height: 80vh;
+  min-height: 60vh;
   padding: 2rem 1rem; /* Adjusted for mobile */
 }
 section {
@@ -150,6 +154,37 @@ section {
   letter-spacing: 0.01ex;
   font-weight: bold;
 }
+.contacts {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+.contacts-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 0.8rem;
+  background-color: var(--color-pre-primary);
+}
+.contact-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  padding: 0.5rem 0.8rem;
+}
+.contact-txt {
+  font-size: 0.8rem;
+  padding-left: 3.5rem;
+  line-height: 120%;
+  color: var(--color-pre-secondary);
+}
+.contact-svg {
+  width: 2rem;
+}
 
 /* Tablet (Medium screens) */
 @media (min-width: 768px) {
@@ -166,6 +201,11 @@ section {
   .c-p {
     font-size: 1.5;
   }
+  .contacts {
+    flex-direction: row-reverse;
+    gap: 4rem;
+    margin-top: 8rem;
+  }
 }
 
 /* Desktop (Large screens) */
@@ -173,6 +213,7 @@ section {
   main {
     padding: 3rem 2rem;
     width: 60%;
+    min-height: 80vh;
   }
   section {
     gap: 3rem;
@@ -186,5 +227,20 @@ section {
   }
   .c-p {
     font-size: 1.2rem;
+  }
+  .contacts {
+    width: 100%;
+    justify-content: space-around;
+  }
+  .contact-txt {
+    font-size: 1rem;
+  }
+  .contact-a {
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    transition: background 0.25s ease-in-out;
+  }
+  .contact-a:hover {
+    background-color: var(--color-primary);
   }
 }
