--- a/css/footer.css
+++ b/css/footer.css
@@ -17,6 +17,10 @@ footer {
   align-items: center;
   gap: 0.5rem;
 }
+.footer-ctas {
+  display: flex;
+  gap: 0.2rem;
+}
 .footer-cta {
   text-decoration: none;
   font-family: var(--font-babuka-mt);
@@ -24,10 +28,10 @@ footer {
   color: var(--color-secondary);
   background-color: var(--color-pre-primary);
   border-radius: 0.5rem;
-  padding: 0.8rem;
+  padding: 0.6rem;
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 0.6rem;
   height: 100%;
 }
 
@@ -59,6 +63,10 @@ footer {
   height: 1px;
 }
 @media (min-width: 768px) {
+  .footer-ctas {
+    display: flex;
+    gap: 0.5rem;
+  }
   .footer-cta {
     gap: 0.5rem;
   }
@@ -83,6 +91,10 @@ footer {
   .zyrab:hover {
     color: var(--color-accent);
   }
+  .footer-ctas {
+    display: flex;
+    gap: 0.8rem;
+  }
   .footer-cta {
     gap: 0.5rem;
     font-size: 1rem;
@@ -95,10 +107,10 @@ footer {
     border: 1px solid var(--color-pre-primary);
   }
   .cta-svg {
-    width: 0.6rem;
+    width: 0.8rem;
   }
   .cta-text {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
   }
   .footer-line {
     width: 1px;
